@@ -407,7 +407,7 @@ static libspectrum_byte *
 alloc_and_copy_page( libspectrum_byte* source_page )
 {
   libspectrum_byte *buffer;
-  buffer = malloc( MEMORY_PAGE_SIZE );
+  buffer = libspectrum_new( libspectrum_byte, MEMORY_PAGE_SIZE );
   if( !buffer ) {
     ui_error( UI_ERROR_ERROR, "Out of memory at %s:%d", __FILE__,
               __LINE__ );
