@@ -340,7 +340,7 @@ spectranet_to_snapshot( libspectrum_snap *snap )
   libspectrum_snap_set_spectranet_w5100( snap, 0,
     nic_w5100_to_snapshot( w5100 ) );
 
-  snap_buffer = malloc( SPECTRANET_ROM_LENGTH * sizeof( libspectrum_byte ) );
+  snap_buffer = libspectrum_new( libspectrum_byte, SPECTRANET_ROM_LENGTH );
   if( !snap_buffer ) {
     ui_error( UI_ERROR_ERROR, "Out of memory at %s:%d", __FILE__, __LINE__ );
     return;
@@ -350,7 +350,7 @@ spectranet_to_snapshot( libspectrum_snap *snap )
   memcpy( snap_buffer, src, SPECTRANET_ROM_LENGTH );
   libspectrum_snap_set_spectranet_flash( snap, 0, snap_buffer );
 
-  snap_buffer = malloc( SPECTRANET_RAM_LENGTH * sizeof( libspectrum_byte ) );
+  snap_buffer = libspectrum_new( libspectrum_byte, SPECTRANET_RAM_LENGTH );
   if( !snap_buffer ) {
     ui_error( UI_ERROR_ERROR, "Out of memory at %s:%d", __FILE__, __LINE__ );
     return;
